Add page for checking job status
